test update - updates header

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
             - ng build --env=${BUILD_ENV}
     post_build:
          commands:
-            - aws s3 cp dist s3://${S3_BUCKET} --recursive
+            - aws s3 cp dist s3://www.theyspeakofthunder.com --recursive
             - echo Build completed on `date`
 artifacts:
     files:
