Added purchase details component among a lot more.

--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.5.3",
-    "tslib": "1.10.0",
-    "core-js": "2.6.9",
-    "zone.js": "0.9.1",
-    "jasmine-core": "2.99.1",
+    "@angular/animations": "8.2.9",
+    "@angular/common": "8.2.9",
+    "@angular/compiler": "8.2.9",
     "@angular/core": "8.2.9",
     "@angular/forms": "8.2.9",
-    "@angular/common": "8.2.9",
-    "@angular/router": "8.2.9",
-    "jasmine-marbles": "0.6.0",
-    "@angular/compiler": "8.2.9",
-    "web-animations-js": "2.3.2",
-    "@angular/animations": "8.2.9",
     "@angular/platform-browser": "8.2.9",
+    "@angular/platform-browser-dynamic": "8.2.9",
+    "@angular/router": "8.2.9",
+    "@types/jquery": "^3.3.31",
     "angular-in-memory-web-api": "0.8.0",
-    "@angular/platform-browser-dynamic": "8.2.9"
+    "core-js": "2.6.9",
+    "jasmine-core": "2.99.1",
+    "jasmine-marbles": "0.6.0",
+    "rxjs": "6.5.3",
+    "tslib": "1.10.0",
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
