--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "2.6.9",
     "jasmine-core": "2.99.1",
     "jasmine-marbles": "0.6.0",
+    "ngx-spinner": "^9.0.1",
     "rxjs": "6.5.3",
     "tslib": "1.10.0",
     "web-animations-js": "2.3.2",
